; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/arswitch/extr_arswitch_8327.c_ar8327_vlan_get_port.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/arswitch/extr_arswitch_8327.c_ar8327_vlan_get_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arswitch_softc = type { i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@ETHERSWITCH_VID_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.arswitch_softc*, i32*, i32)* @ar8327_vlan_get_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar8327_vlan_get_port(%struct.arswitch_softc* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.arswitch_softc*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.arswitch_softc* %0, %struct.arswitch_softc** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.arswitch_softc*, %struct.arswitch_softc** %4, align 8
  %10 = load i32, i32* @MA_OWNED, align 4
  %11 = call i32 @ARSWITCH_LOCK_ASSERT(%struct.arswitch_softc* %9, i32 %10)
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @ETHERSWITCH_VID_MASK, align 4
  %14 = and i32 %12, %13
  store i32 %14, i32* %7, align 4
  %15 = load %struct.arswitch_softc*, %struct.arswitch_softc** %4, align 8
  %16 = getelementptr inbounds %struct.arswitch_softc, %struct.arswitch_softc* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @AR8327_REG_PORT_LOOKUP(i32 %18)
  %20 = call i32 @arswitch_readreg(i32 %17, i32 %19)
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = and i32 %21, 127
  %23 = load i32*, i32** %5, align 8
  store i32 %22, i32* %23, align 4
  ret i32 0
}

declare dso_local i32 @ARSWITCH_LOCK_ASSERT(%struct.arswitch_softc*, i32) #1

declare dso_local i32 @arswitch_readreg(i32, i32) #1

declare dso_local i32 @AR8327_REG_PORT_LOOKUP(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
